# vertex-theme

./: .gitignore  AUTHORS  HACKING.md  NEWS  README.md  configure.ac
Vertex/openbox-3/: themerc
common/: Makefile.am
common/cinnamon/: cinnamon.css
common/gnome-shell/3.18/sass/: _common.scss
common/gnome-shell/3.22/sass/: _common.scss
common/gnome-shell/3.24/sass/: _common.scss
common/gnome-shell/3.26/: assets
common/gnome-shell/3.26/sass/: _common.scss
common/gnome-shell/3.28/sass/: _common.scss
common/gnome-shell/3.30/sass/: _common.scss  _drawing.scss
common/gnome-shell/3.32/sass/: _common.scss
common/gnome-shell/3.34/sass/: _common.scss
common/gtk-3.0/3.18/sass/: _applications.scss
common/gtk-3.0/3.20/sass/: _applications.scss  _common.scss
common/metacity-1/: metacity-theme-2-dark.xml  metacity-theme-2-light.xml  metacity-theme-2.xml  metacity-theme-3-dark.xml  metacity-theme-3-light.xml  metacity-theme-3.xml
extra/: Makefile.am
extra/Vertex_alt_metacity/metacity-1/: metacity-theme-3.xml
m4/: vertex-gnome-shell.m4  vertex-gtk3.m4
